--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
     border-bottom: 2px solid #D9D9D9;
 }
 
+
 .logo {
     margin-right: 18px;
 }
@@ -66,7 +67,7 @@ input {
 }
 
 .search-form__input {
-    background-image: url('./img/icon_search.png');
+    background-image: url('../img/icon_search.png');
     background-repeat: no-repeat;
     background-position: 7px;
     width: 280px;
