--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ input {
     background-color: #fff;
     border-radius: 4px;
     border-collapse: collapse;
+    margin-bottom: 50px;
 }
 
 .table-tr {
