--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ input {
 }
 
 .table {
-    width: 60%;
+    width: 70%;
     background-color: #fff;
     border-radius: 4px;
     border-collapse: collapse;
@@ -310,6 +310,10 @@ input {
     opacity: 1;
     -webkit-transform: scale(1);
     transform: scale(1);
+}
+
+.detail-form {
+    margin-bottom: 70px;
 }
 
 .detail-form_btn {
